--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,11 +4,13 @@
 body {
   margin: 0;
   background-color: #dddddd;
+
   display: flex;
-  min-height: 100vh;
   flex-direction: column;
+  min-height: 100vh;
 }
 
+// this footer code would be needed for bottom panel
 footer {
   color: white;
   display: flex;
@@ -46,153 +48,40 @@ footer {
   font-size: 1rem;
 }
 
-.smallest-font {
-  font-size: 0.75rem;
-}
+.top-panel {
+  flex: 1;
 
-.btn-primary {
-  font-weight: bold;
-}
-
-.sidebar-heading {
-  border-bottom: 2px solid black;
-  margin-left: 5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.main-container {
   display: flex;
+}
+
+.left-panel {
+  background-color: red;
   flex: 1;
 }
 
-.sidebar-section {
-  display: flex;
-  width: 30vw;
-  flex-direction: column;
-}
-
-.sidebar-item {
-  display: flex;
-  gap: 10px;
-  margin: 5px;
-}
-
-.btn-group-vertical {
-  width: 95%;
-}
-
-.sidebar-text {
-  flex: 1;
-  text-align: left;
-}
-
-.modal-form {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal-form-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-
-  label {
-    font-weight: bold;
-  }
-}
-
-.modal-close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.btns-container {
-  display: flex;
-  gap: 5px;
-  margin: 5px;
-  justify-content: center;
-
-  button {
-    flex: 1;
-  }
-}
-
-.content-section {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-.task-item {
-  display: flex;
-  border: 2px solid black;
-  border-radius: 5px;
-  margin-top: 2px;
-  margin-bottom: 2px;
-}
-
-.task-item-text {
+.right-panel {
+  background-color: blue;
   flex: 1;
 }
 
-.task-due-date {
-  border-radius: 8px;
-  border: 2px solid black;
-  padding: 2px;
-  margin: 2px;
-}
-
-.add-task-button {
-  display: flex;
-  gap: 10px;
-  margin: 20px;
-}
-
-.options-container {
-  position: relative;
-}
-
-.options {
-  display: none; // when active, set as flex
-  flex-direction: column;
-  width: 100px;
-  row-gap: 5px;
-  padding: 5px;
-  background-color: #3a3a3a;
-
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
+.bottom-panel {
+  background-color: green;
+  flex: 1;
 }
 
 @media (max-width: 600px) {
   $content-width: 95vw;
 
-  .main-container {
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
+  // .main-container {
+  //   flex-wrap: wrap;
+  //   justify-content: space-around;
+  // }
 
-  .sidebar-section {
-    width: $content-width;
-  }
+  // .sidebar-section {
+  //   width: $content-width;
+  // }
 
-  .content-section {
-    width: $content-width;
-  }
+  // .content-section {
+  //   width: $content-width;
+  // }
 }
