--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -60,7 +60,9 @@ footer {
   font-size: 0.75rem;
 }
 
-.top-panel {
+
+
+.panel-container {
   flex: 1;
 
   display: flex;
@@ -74,8 +76,8 @@ footer {
   flex: 1;
 
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .bottom-panel {
@@ -84,7 +86,8 @@ footer {
 
 .weather-detail-container {
   display: flex;
-  width: 15vw;
+  width: 20vw;
+  margin: auto;
 
   img {
     max-height: 50px;
@@ -102,10 +105,7 @@ footer {
     flex-direction: column;
     align-items: flex-start;
   }
-
 }
-
-
 
 @media (max-width: 600px) {
   $content-width: 95vw;
