feat: create skeleton hourlyWeatherUI
Added drag to scroll feature on hourlyWeatherUI.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -60,8 +60,6 @@ footer {
   font-size: 0.75rem;
 }
 
-
-
 .panel-container {
   flex: 1;
 
@@ -104,6 +102,25 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+  }
+}
+
+.horizontal-scroll-container {
+  display: flex;
+  overflow: auto;
+  cursor: grab;
+
+  div {
+    width: 10vw;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  img {
+    pointer-events: none;
+    cursor: default;
   }
 }
 
